--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Index</title>
 </head>
 <body>
-    
+    <h1>Hello world </h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione eligendi soluta provident a deserunt animi placeat exercitationem odio qui accusantium commodi minima debitis, natus suscipit sunt, at iure sed voluptate?</p>
 </body>
 </html>
