--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Hello world </h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione eligendi soluta provident a deserunt animi placeat exercitationem odio qui accusantium commodi minima debitis, natus suscipit sunt, at iure sed voluptate?</p>
+    <section>
+        <b>THis is section </b>
+    </section>
 </body>
 </html>
