--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Hello world </h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione eligendi soluta provident a deserunt animi placeat exercitationem odio qui accusantium commodi minima debitis, natus suscipit sunt, at iure sed voluptate?</p>
     <section>
-        <b>THis is section </b>
+        <b>THis is section g</b>
     </section>
 </body>
 </html>
